Fleshed out the mission information and fixed a spacing issue with the mission cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ label {
 .flex-box {
   display: flex;
   flex-wrap: wrap;
+  margin: 5px;
 }
 
 .flex-row {
@@ -168,13 +169,13 @@ nav li a:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  width: 1000px;
+  width: 100%;
   margin: auto;
   padding: 15px;
 }
 
 .mission-image {
-  background-image: url('../images/mission-bg.jpg');
+  background-image: url('../images/mission-badge.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -183,7 +184,9 @@ nav li a:hover {
 
 .mission-info {
   display: inline-block;
-  margin-left: 15px;
+  margin: 0 0 0 30px;
+  width: 200px;
+  font-size: 0.8em;
 }
 
 /* form styling */
